--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         compose_version = '1.2.0'
         kotlin_version = '1.7.0'
+        nav_version = '2.5.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
