--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="ru.skillbranch.sbdelivery">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".presentation.component.SbDeliveryApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +15,7 @@
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.SBDelivery"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name="ru.skillbranch.sbdelivery.MainActivity"
