--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         datastore_version = '1.0.0'
         okhttp_version = '4.9.3'
         retrofit_version = '2.9.0'
+        glide_version = '4.13.2'
     }
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
